# GSoC_2025

./: .gitignore  LICENSE  README.md  export_lists_6-30-25.json  litellm_test.py  pyproject.toml  requirements.txt  run_llm_generate_lists.sh  run_validate_gene_pathway_subtype_lists.sh
assets/: oncotree_latest_stable_Dec2025.json  oncotree_latest_stable_June2025.json
gene_pathway_lists/: INVALID_or_unknown_validation_status.json  VALID_genes_pathways_molecularsubtypes.json  complete_export_lists.json  export_lists.json  export_lists_and_info.json  export_lists_info_6codes.json  litellm_export_lists_PAAD_BRCA.json  validate_genes_in_reference.json  validate_genes_pathways_in_references.json  validate_genes_pathways_in_references_NSCLC_BRCA_MNM.json
generate_lists/: gsoc2025_llm_prompt_trial_6-2-25.py  gsoc2025_llm_prompt_trial_6_2_25.py  llm_mine_gene_pathway_assoc_oncotree.py  merge_export_lists.py  validate_genelist.py
run_scripts/: run_llm_generate_lists.sh
