[project]
name = "cbioportal_gene_pathway_miner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.79.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.16.0",
    "lxml>=6.0.2",
    "tqdm>=4.67.1"
]
